--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
       <main>
         <section class="social-links">
+          <h2>Follow me</h2>
           <a href="https://x.com/DaysAiry6618" target="_blank" class="x-link">
-            <img src="https://pbs.twimg.com/profile_images/1887646894182309889/mZrs3a1y_400x400.jpg" alt="X (Twitter) Logo" class="x-logo" />
-            <span data-en="Follow me on X"
-                  data-es="Sígueme en X"
-                  data-ko="X에서 팔로우하기"
-                  data-ja="Follow me on X">Follow me on X</span>
+            <img src="images/logo-x.png" alt="X (Twitter) Logo" class="x-logo" />
+          </a>
+          <a href="https://www.tiktok.com/@riyaginger" target="_blank" class="x-link">
+            <img src="images/logo-tiktok.png" alt="X (Twitter) Logo" class="x-logo" />
           </a>
         </section>
 
