--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="images/logo-x.png" alt="X (Twitter) Logo" class="x-logo" />
           </a>
           <a href="https://www.tiktok.com/@riyaginger" target="_blank" class="x-link">
-            <img src="images/logo-tiktok.png" alt="X (Twitter) Logo" class="x-logo" />
+            <img src="images/logo-tiktok.png" alt="TikTok Logo" class="x-logo" />
           </a>
         </section>
 
